  - Fixed Defect #230 Ignore trailers in next & last entry
  - Fixed defect #235 Filmweb plugin - better url identifying in NFO files
  - Fixed Defect #237 Support for the playlist "PLAY ALL" function in myiHome
  - Fixed Defect #243 Trailer tag not removing ending ']'
  - Fixed Defect #251 Movies with IT in the title are incorectly labeled as Italian
  - Enhancement  #257 Update to use the TheMovieDB.org API
  - Fixed Defect #259 Multipart movies (or music albums) with "CD" anywhere in the name generate improper details pages
  - Fixed Defect #275 New Multipart Delimiters added: "DISK" and "PART"
  - Fixed Defect #277 Plot can be too long for AllocinePlugin. It's now trimmed to 600 chars.
  - Enhancement  #279 Add to Issu 101 : add attribute "moviedb" to <id> tag for other plugins
  - Fixed Defect #282 Add ".tbn" as supported cover art format for increased XBMC compatability
  - Fixed Defect #284 Detect if NFO file is newer than generated XML
  - Fixed Defect #286 Better detection of multipart video files.
  - Enhancement  #290 Added Hebrew language recognition to file names and flag
  - Fixed Defect #291 forceXMLOverwrite does not seem to work
  - Fixed Defect #292 Jukebox clean up "-C" does not delete jukebox files
  - Enhancement  #293 Added full rating to default skin as an example. Can be turned of with skin variables.
  - Enhancement(New)  Updated PosterScanner to search for the foldername.* and folder.* for coverart (for TV Series)


MovieJukebox 1.0.12 beta
-----------------------
  - Enhancement #66 Ability to recognise a movie trailer and add it to the movie html page
  - Enhancement #67 New category: Trailer
    Trailers must contain the word Trailer (case-insensitive) somewhere between brackets []
    Trailers will only be included in the new "Trailers" category, and no other genre or alpha-listing
  - Fixed defect #122 Patch for MovieNFOScanner.java for old style imdb urls
  - Enhancement #123 improved MPAA rating organization in the gfb107 skin