@@ -77,3 +77,8 @@ mjb.background.plugin=com.moviejukebox.plugin.DefaultBackgroundPlugin
 
 # Sorting prefixes to ignore:
 sorting.strip.prefixes="A ","An ","The ","Le ","Les "
+
+# Special accented character replacement for indexing purposes
+# This is a comma-separated list. The first character is the accent character followed by a hypen - and then the character to
+# replace it with for indexing
+indexing.character.replacement=\u00C0-A,\u00C1-A,\u00C2-A,\u00C3-A,\u00C4-A,\u00C7-C,\u00C8-E,\u00C9-E,\u00CA-E,\u00CB-E,\u00CC-I,\u00CD-I,\u00CE-I,\u00CF-I,\u00D1-N,\u00D2-O,\u00D3-O,\u00D4-O,\u00D5-O,\u00D6-O,\u00D9-U,\u00DA-U,\u00DB-U,\u00DC-U
